# colour-tools

./: LICENSE  README.md  main.py  pyproject.toml
camera-control/sony/: camera-ui.py  camera_controller.py  remote-cli-output.md  sony.md
colour-conversion/: colour-space.py
colour-plotting/: spectral-locus.py
image-reading/: image-reading.md  jpeg.py  raw-universal.py  we-spectra.py
image-writing/: to_avif.py
